[package]
name = "golem-tv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-graphics = "0.23.1"
image = "0.24.6"
kiddo = "2.1.1"
ndarray = "0.15.6"

[dependencies.windows]
version = "0.48.0"
features = ["Win32_Foundation", "Win32_Graphics_Gdi"]
