[package]
name = "golem-tv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "1.23.1"
image = "0.24.6"
kiddo = "2.1.1"
ndarray = "0.15.6"

[target.'cfg(target_os="macos")'.dependencies]
core-graphics = "0.23.1"

[target.'cfg(target_os="windows")'.dependencies]
dxgcap = "0.2.4"
